xx Sep 2010: 1.1.8 Miek Gieben <rdup@miek.nl>
   * Check for two more I/O errors when reading files


21 Jun 2010: 1.1.7 Miek Gieben <rdup@miek.nl>
    * rdup-up: also create named pipes (fifo)


18 May 2010: 1.1.6 Miek Gieben <rdup@miek.nl>
    * rdup-simple: cleanups + portability


09 Apr 2010: 1.1.5 Miek Gieben <rdup@miek.nl>
    * compile fix


04 Apr 2010: 1.1.4 Miek Gieben <rdup@miek.nl>
    * re-touch timestamp after the backup is made when -a is used,
      otherwise it is done before the backup
    * spring cleaning, remove/clean BUGBUGs and some dead code and
      polish the documentation a bit
    * revert changes in mkpath.c to make FreeBSD happy
    * fix hardlinks in tar/pax output (they must come last)


22 Mar 2010: 1.1.3 Miek Gieben <rdup@miek.nl>
    * rdup: fix reset atime (-a)
    * rdup-simple: add -a (reset atime flag)
    * documentation bugfixes


14 Mar 2010: 1.1.2 Miek Gieben <rdup@miek.nl>
    * rdup: remove sig_atomic_t (build fix for ubuntu 8.04)
     (reported by Andrew Ittner)
    * rdup-up: fixed nasty bug in dir.c dir_parent()
     (leave caller's string alone)
    * rdup-up: rm.c: also use dir_parent()
    * tests: a 'fail'ing gpg test is now 'unresolved'
    * Added contrib/ directory and added prune.rb script
      (prune.rb provided by Matthias-Christian Ott)


2 Mar 2010: 1.1.1 Miek Gieben <rdup@miek.nl>
    * tests: Skip gpg test when gpg is not found (Tom)
    * rdup: Rename strmode() to rdup_strmode for FreeBSD (Charlie Kester)
    * rdup: Dont descend when toplevel directory is a symlink (same behavoir
      as Gnu tar) (Reported by Charlie Kester)
    * rdup: reap our childeren with waitpid() (Oliver Dain)
    * build: Building fix on rpm distros (SuSE/Fedora) (Sven Hartrumpf)
    * build: add --enable-debug to build debug build


24 Jan 2010: 1.1.0 Miek Gieben <rdup@miek.nl>
    * Release!
    * Tweaks and merges from the master branch
    * Remember: installs in /usr/local

